--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-stage-1": "^6.1.18",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
+    "express": "^4.13.3",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-bootstrap": "^0.30.6",
