--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Daycare App for Pokemon Planet",
   "main": "index.js",
+  "engines": {
+    "node": "6.7.0"
+  },
   "repository": "",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
