--- a/package.json
+++ b/package.json
@@ -15,22 +15,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-
-    "webpack-dev-server": "^1.14.0"
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18"
   },
   "dependencies": {
     "babel-core": "^6.2.1",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "webpack": "^1.12.9",
-    "babel-preset-stage-1": "^6.1.18",
-    "bootstrap": "^3.3.7",
     "babel-loader": "^6.2.0",
-    "jquery": "^3.1.1",
+
+    "bootstrap": "^3.3.7",
     "express": "^4.13.3",
+    "jquery": "^3.1.1",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-bootstrap": "^0.30.6",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.16.2"
   }
 }
