--- a/package.json
+++ b/package.json
@@ -15,21 +15,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18"
+    "babel-preset-es2015": "6.1.18",
+    "babel-preset-react": "6.1.18"
   },
   "dependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-
-    "bootstrap": "^3.3.7",
-    "express": "^4.13.3",
-    "jquery": "^3.1.1",
-    "lodash": "^3.10.1",
-    "react": "^0.14.3",
-    "react-bootstrap": "^0.30.6",
-    "react-dom": "^0.14.3",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.16.2"
+    "babel-core": "6.2.1",
+    "babel-loader": "6.2.0",
+    "bootstrap": "3.3.7",
+    "express": "4.13.3",
+    "jquery": "3.1.1",
+    "lodash": "3.10.1",
+    "react": "0.14.3",
+    "react-bootstrap": "0.30.6",
+    "react-dom": "0.14.3",
+    "webpack": "1.12.9",
+    "webpack-dev-server": "1.16.2"
   }
 }
