--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "0.30.6",
     "react-dom": "0.14.3",
     "react-router": "3.0.2",
+    "react-select": "^1.0.0-rc.3",
     "webpack": "1.12.9",
     "webpack-dev-server": "1.16.2"
   }
