--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "0.14.3",
     "react-bootstrap": "0.30.6",
     "react-dom": "0.14.3",
+    "react-edit-inline": "1.0.8",
     "webpack": "1.12.9",
     "webpack-dev-server": "1.16.2"
   }
