--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
   },
   "repository": "",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "start": "webpack-dev-server",
     "prod": "NODE_ENV=production node server.js",
-    "postinstall": "webpack -p"
+    "postinstall": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-es2015": "6.1.18",
-    "babel-preset-react": "6.1.18"
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "install": "^0.12.2",
+    "npm": "^6.7.0",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
   },
   "dependencies": {
-    "babel-core": "6.2.1",
-    "babel-loader": "6.2.0",
     "bootstrap": "3.3.7",
     "express": "4.13.3",
     "jquery": "3.1.1",
@@ -29,7 +33,6 @@
     "react-bootstrap": "0.30.6",
     "react-dom": "0.14.3",
     "react-edit-inline": "1.0.8",
-    "webpack": "1.12.9",
-    "webpack-dev-server": "1.16.2"
+    "webpack-dev-server": "^3.1.14"
   }
 }
