--- a/package.json
+++ b/package.json
@@ -3,36 +3,29 @@
   "version": "1.0.0",
   "description": "Daycare App for Pokemon Planet",
   "main": "index.js",
-  "engines": {
-    "node": "6.7.0"
-  },
   "repository": "",
   "scripts": {
-    "start": "webpack-dev-server",
-    "prod": "NODE_ENV=production node server.js",
-    "postinstall": "webpack --mode production"
+    "start": "webpack serve",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "install": "^0.12.2",
-    "npm": "^6.7.0",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1"
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "babel-loader": "^8.2.2",
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
     "bootstrap": "3.3.7",
-    "express": "4.13.3",
     "jquery": "3.1.1",
     "lodash": "3.10.1",
-    "react": "0.14.3",
-    "react-bootstrap": "0.30.6",
-    "react-dom": "0.14.3",
-    "react-edit-inline": "1.0.8",
-    "webpack-dev-server": "^3.1.14"
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-easy-edit": "^1.13.0",
+    "webpack": "^5.13.0"
   }
 }
